# tapi

./: LICENSE  README.md  package.json  svelte.config.js  vite.config.ts
.gitea/workflows/: build-release.yml
.github/workflows/: arm64-release.yml  build-release.yml  macos-ios-build.yml  main.yml  release.yml  releases.yml  windows-arm64-release.yml  windows-x64-release.yml
lang/: en.ini  tr.ini
scripts/: android_build.sh  build_all.sh  create_keystore.sh  export_clean_project.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: database.rs  downloader.rs  file_ops.rs  mangadex.rs  mod.rs  settings.rs  translation.rs
src-tauri/src/config/: language.rs  mod.rs  profile.rs
src-tauri/src/core/: api.rs  archive.rs  database.rs  image.rs  mod.rs  pdf.rs  processor.rs
src-tauri/src/modes/: archive_mode.rs  cli_mode.rs  mangadex_mode.rs  mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/utils/: error.rs  logger.rs  monitor.rs
src/lib/: api_client.ts  i18n.ts
src/lib/components/: ApiEndpointConfig.svelte  DatabaseSection.svelte  FolderSelectorModal.svelte  FolderTreeItem.svelte  KeyValueEditor.svelte  LanguageSelector.svelte  MangaDexSection.svelte  MangaLibraryModal.svelte  ModeCard.svelte  ProgressBar.svelte  SettingsPanel.svelte  TranslationSection.svelte
src/lib/translations/: en.json  tr.json
src/routes/: +page.svelte  +page.svelte.backup
