[package]
name = "TAPI"
version = "1.0.0"
description = "Translation API Tool"
authors = ["Furkan"]
edition = "2024"

[lib]
name = "tapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "stream", "rustls-tls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rayon = "1.11.0"
ini = "1.3"
walkdir = "2.5.0"
chrono = "0.4.42"
zip = { version = "7.0.0", default-features = false, features = ["deflate", "time"] }
rand = "0.9.2"
tokio-util = { version = "0.7.18", features = ["codec"] }
clap = { version = "4.5.54", features = ["derive"] }
base64 = "0.22.1"
blake3 = "1.8.2"
hex = "0.4.3"
sysinfo = "0.37.2"
chacha20poly1305 = "0.10.1"
lopdf = "0.39.0"

# Server Mode Dependencies
axum = { version = "0.8.8", features = ["multipart"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace", "limit"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"

# Android ve Desktop ortak bağımlılıkları buraya açıkça ekleyelim
regex = "1.12.2"
sanitize-filename = "0.6.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
machine-uid = "0.5.4"
regex = "1.12.2"
sanitize-filename = "0.6.0"
[profile.release]
panic = "abort"   
codegen-units = 1 
lto = true       
opt-level = "z"
strip = true

# Android için ekstra optimizasyon
[profile.release.package."*"]
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1
strip = "debuginfo"
